# pantstack

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SETUP_CHECKLIST.md  TEMPLATE.md  cookiecutter.json  docker-compose.local.yml  docker-compose.yml  mkdocs.yml  package.json  pants.toml  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-deploy-dev.yml  auto-deploy-main.yml  block-direct-main.yml  ci.yml  cleanup-pr-stacks.yml  codeql.yml  config-check.yml  deploy.yml  docs-publish-no-env.yml  docs-publish.yml  enforce-version-label.yml  labels-seed.yml  main-branch-protection.yml  pr-preview.yml  protect-main-from-non-dev.yml  semantic-pr.yml  template-release.yml
docs/: index.md
docs/architecture/: cicd.md  infrastructure.md  modules.md  overview.md
docs/development/: commands.md  module-development.md  testing.md  versioning.md
docs/getting-started/: creating-projects.md  quick-start.md  setup-checklist.md  template-setup.md
docs/reference/: api.md  claude.md  configuration.md
docs/template/: contributing.md  publishing.md  updating.md
lockfiles/: README.md
modules/api/: BUILD  (+1 more)
scripts/: bootstrap_foundation.sh  create_project_from_template.sh  docs_serve.sh  esc_attach.sh  esc_init.sh  new_module.sh  new_service.sh  publish_template.sh  quickstart.sh  seed_labels.sh  seed_pulumi.sh  verify_http.sh
services/: __init__.py
(+108 files in other folders)
