[project]
name = "mono-template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
known_third_party = ["pulumi", "pulumi_aws", "pulumi_github"]
